# ta

./: .gitignore  CMakeLists.txt  README.md
src/: communicate.c  communicate.h  ffmpeg.c  ffmpeg.h  input.c  input.h  log.c  log.h  ncurses.c  ncurses.h  other.c  output.c  output.h  play.c  play.h  player.c  player.h  sdl.c  sdl.h  ta.c  ta.h  termios_input.c  termios_input.h  ui.c  ui.h
util/: add_license_to_source.sh
